Adicionado metodos para funcionamento do ajax

--- a/autopecas/config/locales/pt=br_bootstrap.yml
+++ b/autopecas/config/locales/pt=br_bootstrap.yml
@@ -10,6 +10,7 @@
   helpers:
     actions: "Ações"
     links:
+      sell: "Vender"
       back: "Voltar"
       cancel: "Cancelar"
       confirm: "Tem certeza?"
